# polar-cli

./: README.md  pyproject.toml
docs/: spec.md
polar_cli/: api.py  cli.py  models.py  storage.py  sync.py
tests/: conftest.py  test_auth.py  test_commands.py  test_sync.py
