[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "polar-cli"
version = "0.1.0"
description = "CLI for caching Polar AccessLink data locally"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenCode" }
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
]

[project.scripts]
polarctl = "polar_cli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["polar_cli"]

[tool.hatch.build.targets.sdist]
include = [
  "/polar_cli",
  "/README.md",
  "/pyproject.toml",
]
